path-based/pani-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pani
  namespace: cafe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pani
  template:
    metadata:
      labels:
        app: pani
    spec:
      containers:
      - name: pani
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
