path-based/chai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chai-svc
  namespace: cafe
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: chai
