path-based/pani-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pani-svc
  namespace: cafe
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: pani
